--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Binaries
+name: Build
 
 on:
   push:
@@ -11,9 +11,24 @@ on:
       - main
 
 jobs:
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.1
+
   build:
     name: Build for ${{ matrix.goos }}-${{ matrix.goarch }}
     runs-on: ${{ matrix.os }}
+
+    needs: golangci
 
     strategy:
       matrix:
@@ -39,14 +54,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.24.2
+          go-version: stable
 
       - name: Fetch tags
         run: git fetch --tags
