fix permission and input

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build
 
+permissions:
+  contents: write
+
 on:
   push:
     branches:
@@ -15,14 +18,17 @@ on:
         description: 'Build and release'
         required: true
         type: boolean
+        default: 'false'
       prerelease:
         description: 'Is pre-release'
         required: true
         type: boolean
+        default: 'true'
       draft:
         description: 'Is draft'
         required: true
         type: boolean
+        default: 'true'
 
 jobs:
   golangci:
@@ -102,6 +108,7 @@ jobs:
     name: Release
     needs: build
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.release == 'true' }}
 
     steps:
       - name: Checkout repository
