--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,6 +116,8 @@ jobs:
 
       - name: Fetch tags
         run: git fetch --tags
+        with:
+          fetch-depth: 0
 
       - name: Get latest tag
         id: get_tag
